kafka-tutorial/kafka-tutorial/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  selector:
    app: kafka
  ports:
    - protocol: TCP 
      port: 9092
      targetPort: 9092

---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
spec:
  selector:
    app: zookeeper
  ports:
    - protocol: TCP 
      port: 2181
      targetPort: 2181

---
apiVersion: v1
kind: Service
metadata:
  name: producer
spec:
  selector:
    app: producer
  ports:
    - protocol: TCP 
      port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: consumer
spec:
  selector:
    app: consumer
  ports:
    - protocol: TCP 
      port: 8081
      targetPort: 8081
