kafka-tutorial/kafka-tutorial/templates/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-tutorial-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: kafka-tutorial.local
      http: 
        paths:
          - path: /producer
            pathType: Prefix
            backend:
              service: 
                name: producer
                port:
                  number: 8080
          - path: /consumer
            pathType: Prefix
            backend: 
              service:
                name: consumer
                port:
                  number: 8081
